move readme (info) to runcommadn